AI Extension: Fix scroll on mobile (#32419)
* AI Extension: Attach bar to toolbar to fix z-index problems

* AI Extension: Remove z-index

* changelog

* AI Extension: End line in toolbar style

* AI Client: Add border-box in AIControl

* changelog

--- a/projects/plugins/jetpack/extensions/blocks/ai-assistant/extensions/jetpack-contact-form/components/ai-assistant-toolbar-button/style.scss
+++ b/projects/plugins/jetpack/extensions/blocks/ai-assistant/extensions/jetpack-contact-form/components/ai-assistant-toolbar-button/style.scss
@@ -2,10 +2,9 @@
 
 .jetpack-ai-assistant-bar {
 	&.is-fixed {
-		z-index: 31;
 		border-bottom: 1px solid #e0e0e0;
-
 		width: 100%;
+
 		.components-popover__content,
 		.jetpack-components-ai-control__container {
 			width: 100%;
@@ -17,8 +16,4 @@
 			width: 100%;
 		}
 	}
-}
-
-.jetpack-ai-assistant-bar-is-fixed .block-editor-block-contextual-toolbar {
-	margin-bottom: 46px;
 }
